--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1183,6 +1183,8 @@ JudgmentTransformCommand=%JudgmentTransformSharedCommand
 [Profile]
 ShowCoinData=true
 UnlockAuthString=""
+CustomLoadFunction=function(profile, dir) end
+CustomSaveFunction=function(profile, dir) end
 
 [RadarValues]
 WriteComplexValues=true
