--- a/Themes/rsr/metrics.ini
+++ b/Themes/rsr/metrics.ini
@@ -1,22 +1,26 @@
 [Global]
 FallbackTheme=_fallback
+
 [ScreenWithMenuElements]
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
 HeaderY=SCREEN_TOP
 HeaderOnCommand=
 HeaderOffCommand=
+
 #
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
 FooterY=SCREEN_BOTTOM
 FooterOnCommand=
 FooterOffCommand=
+
 #
-TimerX=SCREEN_WIDTH-64
-TimerY=SCREEN_TOP+48-4.5
-TimerOnCommand=
+TimerX=SCREEN_RIGHT-16
+TimerY=SCREEN_TOP+40-4.5
+TimerOnCommand=draworder,105
 TimerOffCommand=
+
 [MenuTimer]
 Text1OnCommand=stopeffect;stoptweening;vertalign,bottom;horizalign,right
 Text1FormatFunction=function(fSeconds) \
@@ -28,9 +32,16 @@ Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcol
 	#~ MESSAGEMAN:Broadcast("TimerWarning"); \ 
 	#~ cmd(diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcolor1,color("0.5,0,0,1"))(self); \
 #~ end; 
+
 [ScreenTitleMenu]
 ShowHeader=true
 ShowFooter=true
+
+ScrollerX=SCREEN_RIGHT-16
+ScrollerY=SCREEN_CENTER_Y
+
+ScrollerColors="Exit:#ff0000"
+
 [ScreenSelectMusic]
 MusicWheelX=SCREEN_RIGHT-128-18
 MusicWheelOnCommand=draworder,-1
